gradient title bar.  also, fix floating pane shadow / IE shadow bleed through problem (regardless of z-index a child appears above a parent).
git-svn-id: http://svn.dojotoolkit.org/src@2299 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/trunk/src/widget/templates/HtmlFloatingPane.css
+++ b/trunk/src/widget/templates/HtmlFloatingPane.css
@@ -1,22 +1,45 @@
 
 .dojoFloatingPane {
 	position: absolute;
-	z-index: 5;
 	border: 1px solid;
 	border-color: ThreeDHighlight ThreeDShadow ThreeDShadow ThreeDHighlight;
+	overflow: visible;		/* so drop shadow is displayed */
+}
+
+.dojoFloatingPaneBackground {
+	z-index: 5;		/* above the shadow */
 	background-color: ThreeDFace;
-	overflow: hidden;
 }
 
 .dojoFloatingPaneDragbar {
 	z-index: 10;
-	padding: 4px;
 	margin: 2px 2px 0px 2px;
 	background-color: ActiveCaption;
+	cursor: default;
+	overflow: hidden;
+	white-space: nowrap;
+	border-color: ThreeDHighlight ThreeDShadow ThreeDShadow ThreeDHighlight;
+}
+
+.dojoFloatingPaneTitle {
+	padding: 4px;
 	color: CaptionText;
 	font: small-caption;	
-	cursor: default;
-	width: 100%;
+}
+
+/* background image for title bar */
+.dojoFloatingPaneDragbarBackground {
+	z-index: -1;
+}
+.dojoFloatingPaneDragbarForeground {
+	z-index: 1;
+}
+
+/* bar at bottom of window that holds resize handle */
+.dojoFloatingPaneResizebar {
+	z-index: 10;
+	height: 13px;
+	background-color: ThreeDFace;
 }
 
 .dojoFloatingPaneClient {
